new UI update - v2.0

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Memories",
-  "name": "knztnt - memories app",
+  "short_name": "devSquare",
+  "name": "devSquare.club",
   "icons": [
     {
       "src": "favicon.ico",
